--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@tanstack/react-query": "^5.28.0",
+    "@upstash/redis": "^1.36.1",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.358.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.28.0",
-    "wagmi": "^2.5.0",
-    "viem": "^2.8.0",
-    "@rainbow-me/rainbowkit": "^2.0.0",
     "recharts": "^2.12.0",
-    "lucide-react": "^0.358.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "viem": "^2.8.0",
+    "wagmi": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
